	-- Removed embarrassingly frivolous nested locking in C3P0Registry which provoked rare deadlocks
	   when users lookup extensions. Many thanks to Vlad Skarzhevskyy for calling attention to this
	   issue.
        -- ScatteredAcquireTask now tests to see if a BasicResourcePool has already been closed before
	   attempting an acquisition. Thanks to kenicky on github for calling attention to this issue.
c3p0-0.9.5
	-- Fixed small typo in log message, thanks Jaran Nilsen
	-- DriverManagerDataSource: Added synchronization missing for the very rare case of an on-the-fly 
	   reset of 'driverClass'; minor optimization, properly marked driver class loaded if an instantiation
	   of the driver has succeeded.
c3p0-0.9.5-pre10
	-- Removed support for try-with-resources (implementation of marker interface java.lang.AutoCloseable)
	   as it breaks Java6 support. I'll save it for 0.9.6 (unless I get a lot of complaints).
	   Thanks again to dwscott on github.
	-- Added config parameter com.mchange.v2.c3p0.management.ExcludeIdentityToken that allows users to
	   have c3p0 generate predictable, reproducible full JMX ObjectNames (at the cost of extra user
	   responsibility in ensuring the uniqueness of those names). Updated and expanded documentation
	   with respect to JMX support. Thanks to dwscott on github for suggesting this improvement.
c3p0-0.9.5-pre9
	-- In mchange-commons-java, modified log library to consider slf4j library unfound if it gets bound to its 
	   no-op ('NOP') back-end.
	-- Gave proxies a toString() method that embeds the toString() method of the objects they are wrapping, including
	   Statement text if the underlying driver supports that. Thanks to Ketan Padegaonkar for the suggestion.
	-- Added API [in mchange-commons-java] to make it easier for users to create a MultiPropertiesConfig object from a
	   Properties object, which will enable use of the new C3P0Config.refreshMainConfig( overrides, overridesDescription )